style: Minor Beta UI fixes (#1197)
* style(Header): hide scrollbar but still allow side scroll/swipe/drag/touch

* feat: make menu buttons flexiblewith min-width, delete passed in classes, add pointer-cursor

* refactor: use conditional for visibility of plugins settings

* fix: make advanced settings popover appear over nav

* refactor(textarea): minor padding restyling, add max height

* style: make menuItem checkmark invisible instead of hidden so it takes up width space

* style: make presetsMenu trigger an icon button, remove max-width of presets except in mobile view

* style: improve advanced settings mobile styling

* feat: newchat and convo items toggle nav on small screens

* style: improve no presets view

* style: make sure toggle hover effect does not apply on smaller screens

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1709,3 +1709,33 @@ html {
   height:234px;
   width:234px
 }
+
+.border-token-border-heavy {
+  border-color: #c5c5d2;
+  border-color: var(--border-heavy)
+}
+
+.border-token-border-light {
+  border-color: #ececf1;
+  border-color: var(--border-light)
+}
+
+.border-token-border-medium {
+  border-color: #d9d9e3;
+  border-color: var(--border-medium)
+}
+
+.border-token-surface-primary {
+  border-color: #fff;
+  border-color: var(--surface-primary)
+}
+
+.border-token-surface-secondary {
+  border-color: #f7f7f8;
+  border-color: var(--surface-secondary)
+}
+
+.border-token-surface-tertiary {
+  border-color: #ececf1;
+  border-color: var(--surface-tertiary)
+}
